--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <img src="/images/col_3.png" />
                 <div class="product_card-content">
                     <div class="card-description">
-                        <h4>Trendy Oversized Hoodie</h4>
-                        <p>Rs.2500.00</p>
+                        <p id="item-name">Lounge Dress</p>
+                        <p id="item-price">Rs.350.00</p>
                     </div>
                     <button class="read-more"><a href="item.html">Read More</a></button>
                 </div>
